# fapolicyd

./: .gitignore  .packit.yaml  .travis.yml  AGENTS.md  AUTHORS  BUILD.md  ChangeLog  IMA-setup-RHEL8-example.md  INSTALL.tmp  Makefile.am  README  README.md  RELEASE_PROCESS.md  TODO  autogen.sh  configure.ac  fapolicyd-selinux-var-run.patch  fapolicyd-uthash-bundle.patch  fapolicyd.spec  meson.build  meson.options  trigger-ci
.github/workflows/: .rawhide-fedora-build  almalinux.yml  almalinux8.yml  almalinux9.yml  centos-build.yml  centosstream10.yml  rawhide-fedora-build.yml  rockylinux8.yml  rockylinux9.yml  stable-fedora-build.yml  ubuntu22.yml
CI/: ci-tests.fmf  fapolicyd-selinux-el8.patch  fapolicyd-selinux.patch  fapolicyd.spec  upstream-tests.fmf
deb/: README.Debian  build_deb.sh  postinst  rules
dnf/: fapolicyd-dnf-plugin.py
doc/: Makefile.am  fagenrules.8  fapolicyd-cli.1  fapolicyd-cli.8  fapolicyd-filter.conf.5  fapolicyd-perf-test.8  fapolicyd.8  fapolicyd.conf.5  fapolicyd.filter.5  fapolicyd.metrics.5  fapolicyd.rules.5  fapolicyd.state.5  fapolicyd.timing.5  fapolicyd.trust.5  rpm-filter.conf.5  systemd-watchdog.md
doc/uml/: README  fapolicyd.xmi
extra/: Makefile.am  fagenrules  fapolicyd-magic  fapolicyd-tmpfiles.conf  fapolicyd.bash_completion
extra/data/: fapolicyd.conf  fapolicyd.trust
extra/systemd/: fapolicyd.service
init/: Makefile.am  fagenrules  fagenrules.in  fapolicyd-filter.conf  fapolicyd-magic  fapolicyd-tmpfiles.conf  fapolicyd-tmpfiles.conf.in  fapolicyd.bash_completion  fapolicyd.conf  fapolicyd.filter  fapolicyd.mounts  fapolicyd.rules  fapolicyd.rules.known-libs  fapolicyd.rules.restrictive  fapolicyd.service  fapolicyd.service.in  fapolicyd.trust
init/data/: fapolicyd-filter.conf
init/openrc/conf.d/: fapolicyd
init/openrc/init.d/: fapolicyd
init/systemd/: fapolicyd.service
m4/: dyn_linker.m4  rpm_path.m4
rules.d/: 10-languages.rules  20-dracut.rules  22-buildroot.rules  30-dracut.rules  30-patterns.rules  30-updaters.rules  40-bad-elf.rules  41-shared-obj.rules  42-trusted-elf.rules  43-known-elf.rules  70-trusted-lang.rules  71-known-python.rules  72-shell.rules  73-known-perl.rules  74-known-ocaml.rules  75-known-php.rules  76-known-ruby.rules  77-known-lua.rules  78-known-wine.rules  90-deny-execute.rules  91-deny-lang.rules  95-allow-open.rules  Makefile.am  README-rules
src/: Makefile.am  avl.h  daemon-config.c  daemon-config.h  database.c  database.h  event.c  event.h  fapolicyd-cli.c  fapolicyd-defs.h  fapolicyd.c  fd-fgets.c  fd-fgets.h  file.c  file.h  lru.c  lru.h  message.c  message.h  mounts.c  mounts.h  notify.c  notify.h  nv.h  object-attr.c  object-attr.h  object.c  object.h  policy.c  policy.h  process.c  process.h  queue.c  queue.h  rules.c  rules.h  subject-attr.c  subject-attr.h  subject.c  subject.h  (+1 more)
src/cli/: fapolicyd-cli.c  file-cli.c  file-cli.h  ignore-mounts.c  ignore-mounts.h  rule-lint.c  rule-lint.h
src/daemon/: daemon-config.c  daemon-config.h  decision-defer.c  decision-defer.h  decision-worker.c  decision-worker.h  fanotify-fs-error.c  fanotify-fs-error.h  fapolicyd.c  fd-fgets.c  fd-fgets.h  mounts.c  mounts.h  notify.c  notify.h  state-report.c  state-report.h  systemd-notify.c  systemd-notify.h  worker-health.c  worker-health.h
src/handler/: fapolicyd-rpm-loader.c
src/perf-test/: fapolicyd-perf-test.c
src/tests/: Makefile.am  attr_sets_test.c  avl_test.c  daemon_config_test.c  deb_test.c  decision_config_test.c  decision_defer_test.c  decision_timing_report_test.c  ebuild_test.c  elf_file_test.c  escape_test.c  event_test.c  failure_action_test.c  fd_fgets_test.c  file_filter_test.c  file_type_detect_test.c  filter.conf  filter_test.c  gid_proc_test.c  ignore_mounts_risk_test.c  lru_test.c  notify_test.c  policy_concurrent_test.c  policy_reload_test.c  queue_test.c  rpm_backend_test.c  rules_test.c  test-stubs.c  trustdb_format_test.c  trustdb_lmdb_test.c  uid_proc_test.c
src/tests/fixtures/: filter-cases.txt  rules-valid.rules
src/tests/stress/: Makefile.am  README.md  fapolicyd-stress.c
src/tests/stress/scripts/: with-shebang.sh  without-shebang
tests/: test_invariant_fanotify-fs-error.c
tests/fixtures/: broken-filter.conf  filter-cases.txt
